<resources>
    <string name="app_name">Filme</string>
    <string name="nome_filme">Thor Amor e Trovão</string>
    <string name="descricao_imagem">Poster filme Thor Amor e Trovão</string>
    <string name="titulo_botao_mensagem">Mensagem</string>
    <string name="titulo_botao_detalhe_filme">Detalhe Filme</string>
    <string name="detalhe_filme">Detalhe filme</string>
    <string name="sinopse_filme">SINOPSE Thor: Amor e Trovão é quarta aventura solo de Thor (Chris Hemsworth), personagem da Marvel. O próximo filme do super-herói pretende ser a sequência direta de Thor: Ragnarok e o 29º filme do Universo Cinematográfico Marvel. O longa, além de representar os acontecimentos de Thor: Ragnarok, promove a volta de Jane Foster (Natalie Portman), que se transforma na versão feminina de Thor. Os Guardiões da Galáxia terão papel importante na história, trazendo aventuras que podem fazer o filho de Odin questionar seu papel enquanto Deus do Trovão, precisando contar com o apoio de grandes aliados como Valquíria (Tessa Thompson) e Korg (Taika Waititi) para enfrentar suas lutas. O filme ainda apresenta Gorr (Christian Bale) - sendo o grande vilão da narrativa - e ainda, Zeus (Russell Crowe).</string>
    <string name="descrevendo_imagem_vilao">Imagem com o vilão Gorr interpretado por Christian Bale</string>
    <string name="email">email</string>
</resources>