<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagem_filme_thor"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/altura_tamanho_250"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margem_36"
            android:contentDescription="@string/descricao_imagem"
            android:src="@drawable/filme" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margem_36"
            android:text="@string/nome_filme"
            android:textSize="@dimen/fonte_tamanho_16" />

        <Button
            android:id="@+id/botao_mensagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margem_24"
            android:backgroundTint="@color/teal_700"
            android:text="@string/titulo_botao_mensagem" />

        <Button
            android:id="@+id/botao_detalhe_filme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margem_24"
            android:backgroundTint="@color/teal_700"
            android:text="@string/titulo_botao_detalhe_filme" />

        <Button
            android:id="@+id/botao_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margem_24"
            android:backgroundTint="@color/teal_700"
            android:text="@string/email" />

    </LinearLayout>
</ScrollView>