<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cor_cinza_claro"
    tools:context=".DetalheFilme">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margem_36"
            android:text="@string/detalhe_filme"
            android:textSize="@dimen/fonte_tamanho_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margem_36"
            android:layout_marginTop="@dimen/margem_36"
            android:layout_marginRight="@dimen/margem_36"
            android:layout_marginBottom="@dimen/margem_36"
            android:text="@string/sinopse_filme"
            android:textSize="@dimen/fonte_tamanho_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/altura_tamanho_250"
            android:layout_gravity="center"
            android:src="@drawable/imagem_vilao_thor"
            android:contentDescription="@string/descrevendo_imagem_vilao"/>

    </LinearLayout>
</ScrollView>